notification-service/kubernetes/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: notification-service
    namespace: ecommerce
    labels:
        app: notification-service
        component: backend
    annotations:
        description: "Notification Service ClusterIP"
        version: "1.0"
spec:
    selector:
        app: notification-service
    ports:
        - port: 8085
          targetPort: 8085
    type: ClusterIP
